--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="mask-icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
 
 
-  <title>CodePen - Job Search Platform UI</title>
+  <title>Job Search Web Application</title>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
@@ -1753,7 +1753,6 @@ logo.addEventListener("click", () => {
   wrapper.scrollTop = 0;
   jobBg.style.background = bg;
 });
-//# sourceURL=pen.js
     </script>
 
   
